networking/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  backend:
    serviceName: prometheus
    servicePort: 9090
